--- a/hms/user/templates/user/base.html
+++ b/hms/user/templates/user/base.html
@@ -18,10 +18,25 @@
     </style>
 </head>
 <body>
+    <div class="container">
+    <nav class="navbar navbar-default navbar-static-top">
+        
+          <ul class="nav navbar-nav">
+            <li><a class="navbar-brand" href="{% url 'home' %}">Home</a></li>
+            <li><a class="navbar-link" href="{% url 'guest_register' %}">Register</a></li>  
+            {% if user.is_authenticated %}
+              <li><a href="{% url 'logout' %}">Logout</a></li>
+            {% else %}
+              <li><a class="navbar-link" href="{% url 'login' %}">Login</a></li>
+            {% endif %}
+  </ul>
+        
+      </nav>
     {% block content %}
         <p>This is the base teplate</p>
         <!-- <a href={% url "guest_register" %}><button>Signup</button></a> -->
         <a href={% url "login" %}><button>SignIn</button></a>
     {% endblock %}
+    </div>
 </body>
 </html>
